manifests/hola-mundo-istio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hola-mundo
  namespace: hola-mundo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hola-mundo
  template:
    metadata:
      labels:
        app: hola-mundo
    spec:
      containers:
        - name: hola-mundo
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
            - name: secrets-store-inline
              mountPath: "/mnt/secrets"
              readOnly: true
      volumes:
        - name: html
          configMap:
            name: hola-mundo-html
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "vault-hola-mundo"
