manifests/hola-mundo-istio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hola-mundo
  namespace: hola-mundo
spec:
  selector:
    app: hola-mundo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
