manifests/hola-mundo-istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hola-mundo-vs
  namespace: hola-mundo
spec:
  hosts:
    - "*"
  gateways:
    - hola-mundo-gateway
  http:
    - route:
        - destination:
            host: hola-mundo
            port:
              number: 80
